2009-11-03  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Replace the QWebPage::networkRequestStarted() signal with the originatingObject
        property set to the QWebFrame that belongs to the request.

        https://bugs.webkit.org/show_bug.cgi?id=29975

        * Api/qwebpage.h:
        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::dispatchDecidePolicyForNewWindowAction):
        (WebCore::FrameLoaderClientQt::dispatchDecidePolicyForNavigationAction):
        (WebCore::FrameLoaderClientQt::startDownload):
        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::loadFinished):
        (TestNetworkManager::createRequest):
        (tst_QWebPage::originatingObjectInNetworkRequests):

2009-11-02  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

        Reviewed by Adam Barth.

        QWebView crash fix.

        The QWebView should not crash if the stop() method is called from
        a function triggered by the loadProgress signal.

        A null pointer protection was added in the ProgressTracker::incrementProgress.

        New autotest was created.

        https://bugs.webkit.org/show_bug.cgi?id=29425

        * tests/qwebview/tst_qwebview.cpp:
        (WebViewCrashTest::WebViewCrashTest):
        (WebViewCrashTest::loading):
        (tst_QWebView::crashTests):

2009-11-01  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Eric Seidel.

        Turn on warnings for QtWebKit for gcc
        https://bugs.webkit.org/show_bug.cgi?id=30958

        * Api/qwebpage.cpp:
        (QWebPagePrivate::QWebPagePrivate): Reorder initialization list 
        to fix compiler warnings.
        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::FrameLoaderClientQt): Ditto.

2009-10-30  Evan Stade  <estade@chromium.org>

        Reviewed by David Levin.

        Notify the chrome when the focused node has changed.